--- a/style.css
+++ b/style.css
@@ -2,134 +2,140 @@
     outline: 1px dotted black;
 } */
 
+/* COMMON/PAGE WIDE STYLING */
 h4{
     color: white;
-    background-color: grey;
+    background-color: #9b9aa3;
     margin: 0px;
     padding: 5px;
     text-align: left;
 }
 
+
 div.container{
-    width: 900px;
+    width: 1000px;
     min-height: 200px;
-    background-color: purple;
-    display: inline-block;
+    background-color: #6f5964;
+    display: flex;
+    flex-direction: column;
 }
 
-    div.container div.header{
-        width: 900px;
-    }
 
+/* STYLING FOR HEADER CONTAINER */
         div.container div.header div.bar{
             display: flex;
             justify-content: space-between;
             align-items: center;
             text-align: center;
             background-color: white;  
-
+            padding: 20px;
+            height: 30px;
         }
 
+    /* STYLING FOR TOP CONTAINER */    
     div.container div.top{
-        height: 280px;
+        height: 300px;
         padding: 10px;
         display: flex;
         justify-content: space-between;
+        align-items: top;
+        
     }
-
         div.container div.top div.box{
-            width: 400px;
-            height: 273px;
             text-align: left;
             background-color: white;
-            margin: 10px;
+            width: 500px;
             
         }
-            div.container div.top div.box img{
-                width: 400px;
+            div.container div.top div.box  a{
+                color: black;
+                margin: 10px;
+            }
+            div.container div.top div.box p{
+                margin: 10px;
+            }
+            div.container div.top div.portpic img{
+                width: 439px;
                 border: 5px solid gray;
             }
-        div.container div.top div.box  a{
-            color: black;
-        }
+        
 
+
+    /* STYLING FOR MIDDLE CONTAINER */
     div.container div.middle{
-        height: 580px;
+        height: 600px;
         display: flex;
         vertical-align: top;
-        justify-content: space-around;
-        background-color: aquamarine;
+        justify-content: space-between;
         margin: 10px;
-    }
-        
+    }  
         div.container div.middle div.box{
-            width: 28%;
+            width: 31%;
             display: flex;
             flex-direction: column;
             text-align: left;
-            vertical-align: top;
-            background-color: yellow;
+            justify-content: space-between;
+            background-color: #e5dbe5;
         }
-
             div.container div.middle div.part1 {
                 height: 400px;
-                margin: 10px;
             }
-
             div.container div.middle div.part2 {
-                vertical-align: top;
-                text-align: center;
-                height: 120px;
+                text-align: left;
+                height: fit-content;
             }
-
             div.container div.middle div.part3 {
                 text-align: center;
-                height: 30px;
+                height: 50px;
             }
 
+
+            /* SHARED STYLING FOR THE 3 BOXES IN THE MIDDLE OF THE SCREEN */
             div.container div.middle div.box a{
                 color: white;
                 background-color: green;
                 text-decoration: none;
                 border-radius: 10px;
                 padding: 5px;
-                vertical-align: middle;
+            }
+            div.container div.middle div.box p{
+                padding: 5px;
             }
             div.container div.middle div.box img{
                 width: 100%;
             }
-
             div.container div.middle div.box ul{
                 padding: 0;
             }
-
             div.container div.middle div.box li{
-                display: inline;
-                
+                display: inline-flex;
+                padding: 3px;
             }
-            
             div.container div.middle div.box li img{
-                width: 30px;
+                width: 50px;
             }
 
+
+    /* FOOTER SECTION STYLING */
     div.container div.footer{
-        min-height: 50px;
         text-align: center;
         background-color: white;
-
+        margin-top: 10px;
     }
-    
         div.container div.footer ul{
-            display: inline;
+            display: inline-flex;
+            
         }
-
         div.container div.footer li{
-            display: inline;
-        }
-        
+            display: flex;
+            padding-left: 5px;
+            padding-right: 5px;
+            
+        }        
         div.container div.footer img{
-            width: 20px;
+            width: 15px;
         }
         div.container div.footer a{
             color: black;
+            text-decoration: underline;
         }
