--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* *{
-    outline: 1px dotted black;
-} */
-
 /* COMMON/PAGE WIDE STYLING */
 h4{
     color: white;
@@ -11,7 +7,7 @@ h4{
     text-align: left;
 }
 
-
+/* STYLING FOR MAIN CONTAINER */
 div.container{
     width: 1000px;
     min-height: 200px;
@@ -38,7 +34,6 @@ div.container{
         padding: 10px;
         display: flex;
         justify-content: space-between;
-        align-items: top;
         
     }
         div.container div.top div.box{
@@ -121,9 +116,11 @@ div.container{
         text-align: center;
         background-color: white;
         margin-top: 10px;
+        vertical-align: top;
     }
         div.container div.footer ul{
             display: inline-flex;
+            margin: 0px;
             
         }
         div.container div.footer li{
@@ -131,9 +128,12 @@ div.container{
             padding-left: 5px;
             padding-right: 5px;
             
+            
         }        
         div.container div.footer img{
-            width: 15px;
+            height: 20px;
+            vertical-align: middle;
+            margin: 1px;
         }
         div.container div.footer a{
             color: black;
